k8s/overlays/prod/elasticsearch-patch.yml
apiVersion: v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  template:
    spec:
      containers:
        - name: elasticsearch
