k8s/overlays/prod/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basedequestions-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
spec:
  rules:
  - host: base-de-questions.cdsp.sciences-po.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: basedequestions
          servicePort: 8000
